# neo-email

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: Full.md
examples/certificates/: README.md  generate.sh
src/: client_message.rs  command.rs  connection.rs  errors.rs  handle_connection.rs  headers.rs  lib.rs  mail.rs  message.rs  server.rs  status_code.rs
src/controllers/: mod.rs  on_auth.rs  on_close.rs  on_conn.rs  on_email.rs  on_mail.rs  on_mail_cmd.rs  on_rcpt.rs  on_reset.rs  on_unknown_command.rs
src/utilities/: dkim.rs  dmarc.rs  mod.rs  spf.rs
