[package]
name = "neo-email"
version = "0.1.0"
edition = "2021"
authors = ["Jean Vides <jean@nervio.us>"]
description = "The modern way to build emails services with Rust"
repository = "https://github.com/JeanVydes/neo-email"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["smtp", "email", "mail", "server", "client", "async", "tokio", "tls", "rust", "neo-email"]
categories = ["network-programming", "asynchronous", "email"]
documentation = "https://docs.rs/neo-email"
homepage = "https://neo-email.crates.nervio.us"

[dependencies]
hashbrown = "0.14.5"
log = "0.4.22"
logger = "0.4.0"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-tls = "0.3.1"

[features]
smtp-experimental = []
