[package]
name = "neo-email"
version = "0.1.0"
edition = "2021"
authors = ["Jean Vides <jean@nervio.us>"]
description = "The modern way to build emails services with Rust"
repository = "https://github.com/JeanVydes/neo-email"
readme = "README.md"
license = "MIT"
keywords = ["smtp", "email", "mail", "tokio", "neo-email"]
categories = ["network-programming", "asynchronous", "email"]

[dependencies]
base64 = "0.22.1"
hashbrown = "0.14.5"
log = "0.4.22"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.121"
sha1 = "0.10.6"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"
trust-dns-resolver = "0.23.2"

[features]
smtp-experimental = []
