[package]
name = "neo-email"
version = "0.1.1"
edition = "2021"
authors = ["Jean Vides <jean@nervio.us>"]
description = "The modern way to build emails services with Rust"
repository = "https://github.com/JeanVydes/neo-email"
readme = "README.md"
license = "MIT"
keywords = ["smtp", "email", "mail", "tokio", "neo-email"]
categories = ["network-programming", "asynchronous", "email"]

[dependencies]
hashbrown = "0.14.5"
log = "0.4.22"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"
trust-dns-resolver = "0.23.2"

sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
openssl = { version = "0.10", optional = true }

[features]
# Some email headers are experiemental, more information: https://www.iana.org/assignments/message-headers/message-headers.xhtml
smtp-experimental-headers = []
smtp-experimental = [
    "smtp-experimental-headers"
]

spf-experimental = []
dkim-experimental = [
    "sha1",
    "sha2",
    "base64",
    "openssl"
]

utilities-experimental = [
    "spf-experimental",
    "dkim-experimental"
]

experimental = [
    "smtp-experimental",
    "utilities-experimental"
]
